<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rise and Shine</string>
    <string name="activity_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="wake_count_hour">Last Hour: </string>
    <string name="wake_count_day">Last Day: </string>
    <string name="wake_count_month">Last 30 Days: </string>

    <string name="raw_data_display_desc">Display raw data</string>
    <string name="share_desc">Share data</string>

    <string name="menu_save_title">Save</string>

    <string name="card_share">Share</string>
    <string name="card_delete">Delete</string>
    <string name="views">Views</string>
    <string name="card_action_desc">Collapse/Expand card</string>
    <string name="card_options_desc">Card options</string>

    <string name="dialog_last_title">Last </string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_back_count_hint">How far back?</string>
    <string name="dialog_title">Add card...</string>
    <string name="card_state_option">Expanded card</string>

    <string name="share_count">Share count with...</string>

    <string name="shared_preference_file">preferences</string>
    <string name="cards_init">cards_init</string>

    <string name="pref_card_collapsed">New cards are collapsed</string>
    <string name="pref_notification_backcount_title">Notification Backcount</string>
    <string name="pref_notification_backcount_summary">The amount of intervals to go back.</string>
    <string name="pref_notification_interval_title">Notification Interval</string>
    <string name="pref_notification_interval_summary">The counting interval for the notification.</string>

    <string name="time_card_expand">time_card_expand</string>
    <string name="no_data_display">No data yet</string>

    <string name="graph_average_label">Average:</string>
    <string name="graph_stdev_label">St. Dev:</string>

    <string name="screen_count_graph_y_axis">Views</string>

    <string-array name="intervals">
        <item>Hour</item>
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
    </string-array>
</resources>
