<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="pref_card_collapsed"
        android:title="@string/pref_card_collapsed"
        android:defaultValue="true" />

    <EditTextPreference
        android:key="pref_notification_backcount"
        android:title="@string/pref_notification_backcount_title"
        android:defaultValue="1"
        android:summary="@string/pref_notification_backcount_summary"/>

    <ListPreference
        android:key="pref_notification_interval"
        android:title="@string/pref_notification_interval_title"
        android:summary="@string/pref_notification_interval_summary"
        android:entries="@array/intervals"
        android:entryValues="@array/intervals"/>

</PreferenceScreen>