<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:graphview="http://schemas.android.com/apk/res-auto"
    xmlns:ltv="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/graph_details_background"
    android:orientation="vertical">

    <views.GraphView
        android:id="@+id/fragment_details_graph"
        android:layout_width="match_parent"
        android:layout_height="@dimen/graph_height"
        android:background="@android:color/white"
        android:paddingRight="@dimen/fragment_graph_padding_horizontal"
        android:paddingLeft="@dimen/fragment_graph_padding_horizontal"
        android:transitionName="@string/time_card_expand"
        graphview:textSize="@dimen/graph_text_size"
        graphview:lineColor="@color/graph_line_color"
        graphview:shadeColor="@color/graph_shade_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/graph_stats_padding_horizontal"
        android:paddingEnd="@dimen/graph_stats_padding_horizontal"
        android:background="@color/graph_stats_background"
        android:orientation="vertical" >
        <views.LabeledTextView
            android:id="@+id/graph_average"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/graph_stats_text_size"
            android:textColor="@color/graph_stats_text_color"
            android:paddingBottom="@dimen/graph_stats_padding_vertical"
            ltv:label="@string/graph_average_label" />

        <views.LabeledTextView
            android:id="@+id/graph_stdev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/graph_stats_text_size"
            android:textColor="@color/graph_stats_text_color"
            android:paddingBottom="@dimen/graph_stats_padding_vertical"
            ltv:label="@string/graph_stdev_label" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/column_index_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/column_views_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/views"/>
    </LinearLayout>

    <ListView
        android:id="@+id/graph_points"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>