<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:graphview="http://schemas.android.com/apk/res-auto"
    xmlns:toggleable="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/selectableItemBackground">

    <RelativeLayout
        android:id="@+id/card_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/time_card_body_padding_vertical"
        android:paddingBottom="@dimen/time_card_body_padding_vertical">

        <TextView
            android:id="@+id/interval_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:paddingLeft="@dimen/time_card_title_padding_horizontal"
            android:textAppearance="@style/TextAppearance.Medium"/>

        <views.ToggleableView
            android:id="@+id/toggleable_data"
            android:layout_below="@+id/interval_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/no_data_display"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="@dimen/no_data_display_text_size"
                android:text="@string/no_data_display"/>

            <views.GraphView
                android:id="@+id/graph"
                android:layout_width="match_parent"
                android:layout_height="@dimen/graph_height"
                graphview:textSize="@dimen/graph_text_size"
                graphview:lineColor="@color/graph_line_color"
                graphview:shadeColor="@color/graph_shade_color"
                android:transitionName="@string/time_card_expand"/>
        </views.ToggleableView>
    </RelativeLayout>

    <ImageView
        android:id="@+id/card_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card_body"
        android:layout_centerHorizontal="true"
        android:paddingLeft="@dimen/time_card_action_padding_horizontal"
        android:paddingRight="@dimen/time_card_action_padding_horizontal"
        android:paddingTop="@dimen/time_card_body_padding_vertical"
        android:contentDescription="@string/card_action_desc"
        android:src="@drawable/card_expand"/>

    <ImageView
        android:id="@+id/card_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:paddingTop="@dimen/time_card_overflow_padding_vertical"
        android:contentDescription="@string/card_options_desc"
        android:src="@drawable/ic_share"/>

</RelativeLayout>